fixed spacing in homepage show listings, added permalink to title on blog page and blog post page

--- a/public/stylesheets/sass/pages/home.scss
+++ b/public/stylesheets/sass/pages/home.scss
@@ -160,6 +160,9 @@
 				background-color: transparent;
 				height: 112px;
 				overflow: hidden;
+				.show-meta {
+					p {float: left; margin: 0 5px 5px 0;}
+				}
 				.box {padding: 5px; white-space: normal;}
 				.band {white-space: normal; margin-bottom: 3px;}
 				.show-data-wrapper {
