--- a/public/stylesheets/sass/pages/tumblr.scss
+++ b/public/stylesheets/sass/pages/tumblr.scss
@@ -15,6 +15,10 @@
 				text-transform: capitalize;
 				margin-bottom: 10px;
 				&.quoted-text {font-size: 30px; font-style: italic; margin: 0; padding: 5px 0 0 0;}
+				a {
+					color: #000;
+					&:hover {color: #ff9900;}
+				}
 			}
 			.tumblr-caption {
 				font-size: 13px;
